fix blocks blurry border (#104)

--- a/frontend/app/app.less
+++ b/frontend/app/app.less
@@ -22,17 +22,17 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-    background-color: var(--scrollbar-background-color) !important;
+    background-color: var(--scrollbar-background-color);
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thumb-color) !important;
+    background-color: var(--scrollbar-thumb-color);
     border-radius: 4px;
     margin: 0 1px 0 1px;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-thumb-hover-color) !important;
+    background-color: var(--scrollbar-thumb-hover-color);
 }
 
 .flex-spacer {
@@ -60,4 +60,19 @@ body {
     --os-handle-bg: var(--scrollbar-thumb-color);
     --os-handle-bg-hover: var(--scrollbar-thumb-hover-color);
     --os-handle-bg-active: var(--scrollbar-thumb-active-color);
+}
+
+.scrollbar-hide-until-hover {
+    *::-webkit-scrollbar-thumb,
+    *::-webkit-scrollbar-track {
+        display: none;
+    }
+
+    *::-webkit-scrollbar-corner {
+        display: none;
+    }
+
+    *:hover::-webkit-scrollbar-thumb {
+        display: block;
+    }
 }
