--- a/frontend/app/tab/tab.less
+++ b/frontend/app/tab/tab.less
@@ -5,7 +5,7 @@
     position: absolute;
     width: 130px;
     height: 100%;
-    padding: 6px 3px;
+    padding: 6px 3px 0px;
     box-sizing: border-box;
     font-weight: bold;
     color: var(--secondary-text-color);
