--- a/frontend/app/theme.less
+++ b/frontend/app/theme.less
@@ -19,10 +19,11 @@
     --warning-color: rgb(224, 185, 86);
     --success-color: rgb(78, 154, 6);
     --hover-bg-color: rgba(255, 255, 255, 0.1);
+    --block-bg-color: rgba(255, 255, 255, 0.05);
 
     /* scrollbar colors */
-    --scrollbar-background-color: var(--main-bg-color);
-    --scrollbar-thumb-color: rgba(255, 255, 255, 0.3);
+    --scrollbar-background-color: transparent;
+    --scrollbar-thumb-color: rgba(255, 255, 255, 0.15);
     --scrollbar-thumb-hover-color: rgba(255, 255, 255, 0.5);
     --scrollbar-thumb-active-color: rgba(255, 255, 255, 0.6);
 
